# Probabilistic-Bayesian-LangChain-API

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: primary_benchmark.py
examples/: normal_rag_demo.py  pathological_rag_demo.py
examples/legacy_demos/: 00_sanity_no_llm.py  01_sanity_stochastic_tool.py  01b_sanity_stochastic_tool_no_resample.py  02_llm_json_action.py  03_pathology_tool_selection.py  demo_ambiguous_intent.py  demo_ambiguous_intent_lc.py  demo_structured_json.py  demo_structured_json_lc.py
src/b_langchain/agents/: bayesian_lc.py
src/b_langchain/core/: types.py  utils.py
src/b_langchain/llm/: gemini_colab.py  local_free.py
src/b_langchain/runtime/: interfaces.py  minimal_impl.py  smc_agent.py
src/bayesian_prob_langchain_api/: config.py  schemas.py
src/bayesian_prob_langchain_api/api/: app.py  deps.py
src/bayesian_prob_langchain_api/api/routes/: agents.py  health.py  (+2 more)
src/bayesian_prob_langchain_api/services/: container.py  orchestrator.py  rag.py  tools.py
src/p_langchain/core/: __init__.py  types.py  utils.py
src/p_langchain/llm/: __init__.py  base.py  colab_ai.py  colab_gemini_langchain_wrapper.py
src/p_langchain/policies/: __init__.py  ask_or_proceed.py  base.py  budget.py  stop.py
src/p_langchain/proposers/: __init__.py  base.py  llm_samples.py
src/p_langchain/runtime/: __init__.py  executor.py  logger.py  pchain.py
src/p_langchain/scorers/: __init__.py  base.py  consistency.py  critique.py  intent_entropy.py  schema.py
tests/: test_agents.py  test_api.py  test_rag.py  test_validation.py
